--- a/editable.html
+++ b/editable.html
@@ -276,9 +276,7 @@
             <div class="editable-style text-element silex-id-1439156722120-43" data-silex-type="text-element" data-silex-id="silex-id-1439156722120-43">
                 <div class="silex-element-content normal">
                     <h2>About Our Values</h2>
-                    <p>Excepteur sint aliquip pork shank, filet mignon consectetur cillum rump do eiusmod leberkas pork loin. Turducken enim ut, corned beef kielbasa sausage lorem flank ribeye esse boudin quis shank doner brisket
-                        
-                    </p>
+                    <p>Bêêêêê!!!!!</p>
                     <p></p>
                     <p></p>
                 </div>
