--- a/editable.html
+++ b/editable.html
@@ -91,7 +91,7 @@
     <div class="silex-pages">
         
 
-        <a id="page-acceuil" data-silex-type="page-element" class="page-element" href="#!page-acceuil">Acceuil</a><a class="page-element" data-silex-type="page-element" id="page-valeurs" href="#!page-valeurs">Valeurs</a><a class="page-element" data-silex-type="page-element" id="page-temoignages" href="#!page-temoignages">Temoignages</a><a id="page-r-alsations" href="#!page-r-alsations" data-silex-type="page-element" class="page-element">Réalsations</a><a id="page-mon-histoire" href="#!page-mon-histoire" data-silex-type="page-element" class="page-element">Mon histoire</a><a class="page-element" data-silex-type="page-element" id="page-contact" href="#!page-contact">Contact</a></div>
+        <a id="page-accueil" data-silex-type="page-element" class="page-element" href="#!page-accueil">Accueil</a><a class="page-element" data-silex-type="page-element" id="page-valeurs" href="#!page-valeurs">Valeurs</a><a class="page-element" data-silex-type="page-element" id="page-temoignages" href="#!page-temoignages">Temoignages</a><a id="page-r-alsations" href="#!page-r-alsations" data-silex-type="page-element" class="page-element">Réalsations</a><a id="page-mon-histoire" href="#!page-mon-histoire" data-silex-type="page-element" class="page-element">Mon histoire</a><a class="page-element" data-silex-type="page-element" id="page-contact" href="#!page-contact">Contact</a></div>
 
 
 
@@ -183,7 +183,7 @@ Contactez-moi</h3>
                 </div>
             </div></div>
     </div>
-    <div data-silex-type="container-element" class="prevent-draggable container-element editable-style silex-id-1483139563582-5 section-element paged-element prevent-resizable page-acceuil website-min-width" data-silex-id="silex-id-1483139563582-5">
+    <div data-silex-type="container-element" class="prevent-draggable container-element editable-style silex-id-1483139563582-5 section-element paged-element prevent-resizable website-min-width page-accueil" data-silex-id="silex-id-1483139563582-5">
         <div data-silex-type="container-element" class="editable-style silex-element-content website-width silex-id-1483139563581-4 silex-container-content container-element prevent-draggable style-titre" data-silex-id="silex-id-1483139563581-4" style="">
 
 
@@ -195,7 +195,7 @@ Contactez-moi</h3>
             
         <div data-silex-type="text-element" class="editable-style silex-id-1588402876248-31 text-element style-titre" data-silex-id="silex-id-1588402876248-31" style=""><div class="silex-element-content normal"><h1><b>Ne jetez plus</b></h1><h1>changez de tissu!</h1><span class="_wysihtml-temp-caret-fix" style="position: absolute; display: block; min-width: 1px; z-index: 99999;">﻿</span></div></div></div>
     </div>
-    <div data-silex-type="container-element" class="prevent-draggable container-element editable-style silex-id-1483139324559-3 section-element paged-element prevent-resizable website-min-width page-acceuil" data-silex-id="silex-id-1483139324559-3">
+    <div data-silex-type="container-element" class="prevent-draggable container-element editable-style silex-id-1483139324559-3 section-element paged-element prevent-resizable website-min-width page-accueil" data-silex-id="silex-id-1483139324559-3">
         <div data-silex-type="container-element" class="editable-style silex-element-content website-width silex-id-1483139324558-2 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483139324558-2">
 
 
